--- a/graphics/giflib/Makefile
+++ b/graphics/giflib/Makefile
@@ -3,7 +3,7 @@
 # Date created:		03 May 1997
 # Whom:			Thomas Gellekum <tg@FreeBSD.ORG>
 #
-# $NetBSD: Makefile,v 1.2 1997/12/29 02:54:46 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1998/01/24 05:20:59 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.2 1997/09/24 06:55:01 tg Exp
 #
 
@@ -18,6 +18,6 @@ post-install:
 	@${MKDIR} ${PREFIX}/share/doc/giflib
 	@${INSTALL_DATA} ${WRKSRC}/doc/* ${PREFIX}/share/doc/giflib
 .endif
-	@${LDCONFIG} -m ${PREFIX}/lib || true
+	@${LDCONFIG} -m ${PREFIX}/lib || /usr/bin/true
 
 .include <bsd.port.mk>
