--- a/graphics/mpeg-lib/Makefile
+++ b/graphics/mpeg-lib/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1 1997/12/13 19:48:13 agc Exp $
 # New ports collection makefile for:	mpeg
 # Version required:			1.2.1
 # Date created:				07 December 1997
-# Whom:					tron
+# Whom:					tron@lyssa.owl.de
 #
+# $NetBSD: Makefile,v 1.2 1998/01/24 05:23:39 hubertf Exp $
 
 DISTNAME=	mpeg_lib-1.2.1
 PKGNAME=	mpeg-1.2.1
@@ -11,6 +11,8 @@ CATEGORIES=	graphics
 MASTER_SITES=	ftp://ftp.mni.mcgill.ca/pub/mpeg/ \
 		ftp://ftp.fu-berlin.de/unix/X11/graphics/gimp/libs/ \
 		ftp://ftp.gimp.org/pub/gimp/libs/
+
+MAINTAINER=	packages@netbsd.org
 
 HAS_CONFIGURE=	yes
 
@@ -22,6 +24,6 @@ post-configure:
 
 post-install:
 	(cd ${WRKSRC};make PREFIX=${PREFIX} includes)
-	${LDCONFIG} -m ${PREFIX}/lib || true
+	${LDCONFIG} -m ${PREFIX}/lib || /usr/bin/true
 
 .include <bsd.port.mk>
