--- a/graphics/xv/Makefile
+++ b/graphics/xv/Makefile
@@ -3,7 +3,7 @@
 # Date created:		30 October 1994
 # Whom:			smace
 #
-# $NetBSD: Makefile,v 1.3 1997/12/01 00:04:15 hubertf Exp $
+# $NetBSD: Makefile,v 1.4 1998/01/24 05:32:04 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/07/03 07:37:08 asami Exp
 #
 
@@ -18,6 +18,8 @@ DISTFILES=	${DISTNAME}${EXTRACT_SUFX} \
 PATCH_SITES=    ftp://ftp.cis.upenn.edu/pub/xv/
 PATCHFILES=     xv-3.10a.JPEG-patch xv-3.10a.TIFF-patch # (for tiff3.4)
 
+MAINTAINER=	packages@netbsd.org
+
 LIB_DEPENDS=    jpeg\\.7\\.:${PORTSDIR}/graphics/jpeg \
 		tiff\\.3\\.4:${PORTSDIR}/graphics/tiff
 
@@ -30,7 +32,7 @@ pre-patch:
 
 pre-configure:
 	for f in `find ${WRKDIR} -name Imakefile -print`; do \
-		${SED} -e 's:/usr/local:'${LOCALBASE}':g' < $$f > $$f.pdone && mv $$f.pdone $$f; \
+		${SED} -e 's:/usr/local:'${LOCALBASE}':g' < $$f > $$f.pdone && ${MV} $$f.pdone $$f; \
 	done
 
 post-install:
