--- a/security/ssh/Makefile
+++ b/security/ssh/Makefile
@@ -3,10 +3,11 @@
 # Date created:				19971214
 # Whom:					hubertf@netbsd.org
 #
-# $NetBSD: Makefile,v 1.7 1998/01/22 10:26:39 agc Exp $
+# $NetBSD: Makefile,v 1.8 1998/01/24 15:46:30 kleink Exp $
 # FreeBSD Id: Makefile,v 1.47 1997/11/10 22:04:42 dima Exp
 #
-# Maximal ssh package requires a YES value for USE_PERL.
+# Maximal ssh package requires a YES value for USE_PERL
+# and USE_LIBWRAP.
 #
 
 DISTNAME=       ssh-1.2.22
@@ -38,8 +39,7 @@ IS_INTERACTIVE=	YES
 
 GNU_CONFIGURE=	YES
 
-CONFIGURE_ARGS+= --prefix=${PREFIX} --with-etcdir=/etc --with-libwrap \
-			--disable-suid-ssh
+CONFIGURE_ARGS+= --prefix=${PREFIX} --with-etcdir=/etc --disable-suid-ssh
 
 #Uncomment if all your users are in their own group and their homedir
 #is writeable by that group.  Beware the security implications!
@@ -127,6 +127,11 @@ BUILD_DEPENDS+= perl5.00404:${PORTSDIR}/lang/perl5
 CONFIGURE_ENV+= PERL=${PREFIX}/bin/perl5.00404
 .else
 CONFIGURE_ENV+= PERL=/replace_it_with_PERL_path
+.endif
+
+# Support for libwrap.
+.if defined(USE_LIBWRAP) && ${USE_LIBWRAP} == YES
+CONFIGURE_ARGS+= --with-libwrap
 .endif
 
 # Include SOCKS firewall support
