--- a/lang/mawk/Makefile
+++ b/lang/mawk/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 1997/10/16 13:49:08 agc Exp $
 # New ports collection makefile for:	mawk
 # Version required:     1.2.2
 # Date created:		1 October 1997
 # Whom:			agc@netbsd.org
 #
+# $NetBSD: Makefile,v 1.2 1998/01/24 20:19:46 hubertf Exp $
 #
 
 DISTNAME=       mawk1.2.2
@@ -11,6 +11,8 @@ PKGNAME=        mawk-1.2.2
 WRKSRC=		${WRKDIR}/${PKGNAME}
 CATEGORIES=	lang
 MASTER_SITES=   ftp://ftp.oxy.edu/public/
+
+MAINTAINER=	agc@netbsd.org
 
 GNU_CONFIGURE=	yes
 MAN1=		mawk.1
