--- a/misc/libutf/Makefile
+++ b/misc/libutf/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 1997/10/23 19:45:18 agc Exp $
 # New ports collection makefile for:	libutf
 # Version required:			2.10
 # Date created:				Thu Oct 23 20:22:27 BST 1997
 # Whom:					Alistair Crooks (agc@netbsd.org)
+#
+# $NetBSD: Makefile,v 1.2 1998/01/24 21:11:04 hubertf Exp $
 #
 
 DISTNAME=	libutf-2.10
