--- a/misc/splitvt/Makefile
+++ b/misc/splitvt/Makefile
@@ -3,7 +3,8 @@
 # Date created:         Fri Oct 4, 1996
 # Whom:                 David O'Brien (obrien@cs.ucdavis.edu)
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/11 21:54:59 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/24 21:29:20 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.5 1997/04/02 08:39:12 obrien Exp
 #
 
 DISTNAME=	splitvt-1.6.3
