--- a/net/ttcp/Makefile
+++ b/net/ttcp/Makefile
@@ -1,21 +1,20 @@
-#	$NetBSD: Makefile,v 1.2 1997/12/29 04:18:05 hubertf Exp $
-#
 # New ports collection makefile for:	ttcp
 # Version required:	???
 # Date created:		14 December 1997
 # Whom:			thorpej
 #
+# $NetBSD: Makefile,v 1.3 1998/01/24 21:55:14 hubertf Exp $
+#
 
 DISTNAME=	ttcp
 CATEGORIES=	net
 MASTER_SITES=	http://www.ccci.com/tools/ttcp/
-DISTFILES=	ttcp.tar
-
-EXTRACT_CMD=	mkdir ttcp; tar
 EXTRACT_SUFX=	.tar
-EXTRACT_BEFORE_ARGS=-C ttcp -xf
 
 MAINTAINER=	thorpej@NetBSD.ORG
+
+EXTRACT_CMD=	${MKDIR} ttcp; tar
+EXTRACT_BEFORE_ARGS=-C ttcp -xf
 
 MAN1=		ttcp.1
 
