--- a/plan9/wily/Makefile
+++ b/plan9/wily/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 1997/10/24 09:49:55 agc Exp $
 # New ports collection makefile for:    wily
 # Version required:     		0.13.36
 # Date created:         		Tue Oct 21 16:06:30 BST 1997
 # Whom:                 		agc@netbsd.org (Alistair Crooks)
+#
+# $NetBSD: Makefile,v 1.2 1998/01/24 22:30:27 hubertf Exp $
 #
 
 DISTNAME=	wily-0.13.36
